--- a/SimpleImageGallary/appsettings.json
+++ b/SimpleImageGallary/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SimpleImageGallery;Trusted_Connection=True;MultipleActiveResultSets=True;" 
+  }, 
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
